# axon

./: .gitignore  Cargo.toml  README.md  axon_inspector_context.md  axon_prompt.md  axon_prompt_full_implementations.md
.github/workflows/: deploy.yml
.sqlx/: query-0c46e6192542f2596d2236b049f4bfa54200e991e09aa1cd2e331f67335d3e16.json  query-5af0025e7a330b83064fe7ec00b4b6e460288f2525a58cb96af9db2a443e24ee.json  query-7b2da76928d9eed325875f205b5a82bffbe16046853beaa6611a5f56c94d36bd.json  query-933698fe55d8502b374c88ea57a5778d5b5a5d970f4a3b7694a32dd41e3a5656.json  query-a11b0401b082cdda61ec0128d6c34acb8f10aad00d4732f9232a3127d3a5fc36.json  query-ba4b3436d1cb423cb49327b8f64f4c10d294c67d89c661b58fcdbea06b2c2f3c.json  query-ca322019e96e24597c5f7d401b819f3e7a87b29b66a00daf942585a937e701a6.json  query-e79ade8d72e79313faa98c1761082ed05466070747cfa034278eb5f16bd94ceb.json  query-f9047f5a5fc79b815ec1c6cae1d7fb092839e0b98ffdcc15c612ccecd9a743d6.json
apps/axon-server/: Cargo.toml  Dockerfile
apps/axon-server/.sqlx/: query-37867cd5f556e4a12a6ebce5a663b5dd3c17ecd2503b0724ec8ca9d3b1ba9548.json  query-3927ed2bc0c97c101c266fb07538bb1a00bb7d476c70f8531311d28f9556153f.json  query-6d68c4f3d3d1e39c34e7459c3338ecddef4b5a4c8b0ac65913df5063faf37319.json  query-7d44a6d5056ae01895657aab443956297ea8ae9d6f1443170f161a5da1429fe1.json  query-ef2eafcccabdc42ed7b04cc5a3891f77695ecfd4278e09f243c0a864efd3a3f5.json
apps/axon-server/migrations/: 20260228172923_init_workspaces.sql  20260228212513_init_bundles.sql  20260301113722_update_schema_v2.sql
apps/axon-server/src/: api.rs  infrastructure.rs  lib.rs  main.rs  state.rs
apps/axon-server/src/api/: bundle.rs  engine.rs  extractor.rs  prelude.rs  public.rs  system.rs  workspace.rs
apps/axon-server/src/infrastructure/: bootstrapper.rs  config.rs  db.rs  prelude.rs  repositories.rs
apps/axon-server/src/infrastructure/bootstrapper/: db_ready.rs  unconfigured.rs
apps/axon-server/src/infrastructure/repositories/: bundle_repo.rs  workspace_repo.rs
apps/axon-server/tests/: integration.rs
apps/client-axon/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/client-axon/public/: site.webmanifest
apps/client-axon/src/: App.tsx  main.tsx
apps/client-axon/src-tauri/: Cargo.toml  tauri.conf.json
apps/client-axon/src-tauri/capabilities/: default.json
apps/client-axon/src-tauri/migrations/: 20260228215504_init_schema.sql  20260301113827_update_schema_v2.sql  20260301175134_update_schema_v3.sql
apps/client-axon/src-tauri/src/: _main.rs  _old_main.rs  commands.rs  db.rs  lib.rs  main.rs  state.rs
apps/client-axon/src-tauri/src/commands/: bundle.rs  workspace.rs
apps/client-axon/src-tauri/src/db/: bundle_repo.rs  workspace_repo.rs
apps/client-axon/src/app/: App.tsx  AppRoutes.tsx  constants.ts  index.ts  state-types.ts  store.ts
apps/client-axon/src/pages/: LibraryHubPage.tsx  WelcomePage.tsx  index.ts  test-page.tsx
apps/client-axon/src/theme/: styled.d.ts
apps/client-axon/src/types/: axonTypes.ts  index.ts  workspaceTypes.ts
client-axon/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client-axon/src/: App.tsx  main.tsx
client-axon/src/app/: AppRoutes.tsx  store.ts
client-axon/src/app/hooks/: useStore.ts  useToggle.ts
client-axon/src/app/layouts/: MainLayout.tsx
client-axon/src/components/AxonGraph/: FileNode.tsx  GraphCanvas.tsx  GraphToolbar.tsx  GroupNode.tsx  ProjectExplorerSidebar.tsx
client-axon/src/components/CodeViewer/: CodeViewer.tsx
client-axon/src/components/CreateWorkspaceCard/: CreateWorkspaceCard.tsx
client-axon/src/components/Explorer/: Explorer.tsx
client-axon/src/components/FileSelector/: FileSelector.tsx
client-axon/src/components/Inspector/: GroupConfigView.tsx  InspectorPanel.tsx  PromptRuleEditor.tsx  RootConfigView.tsx
client-axon/src/components/LibraryHub/: WorkspaceCommandPalette.tsx  index.ts
client-axon/src/components/Sidebar/: Sidebar.tsx
client-axon/src/features/: index.ts
client-axon/src/pages/: LibraryHubPage.tsx  WorkspacePage.tsx
client-axon/src/theme/: GlobalStyles.ts  index.ts  themes.ts
client-axon/src/types/: axonTypes.ts  themeTypes.ts  workspaceTypes.ts
crates/axon_cli/: Cargo.toml
crates/axon_core/: Cargo.toml
crates/axon_core/bindings/: ids.ts  parser.ts  symbols.ts
crates/axon_core/src/: bundler.rs  core.rs  domain.rs  engine.rs  error.rs  explorer.rs  graph.rs  ids.rs  ir.rs  lib.rs  macros.rs  main.rs  parser.rs  path.rs  paths.rs  spool.rs  tree.rs  ts_exporter.rs
crates/axon_core/src/analysis/: javascript.rs
crates/axon_core/src/analysis/javascript/: parser.rs  skeleton.rs
crates/axon_core/src/bundler/: rules.rs
crates/axon_core/src/core/: graph.rs
crates/axon_core/src/domain/: bundle.rs  public.rs  workspace.rs
crates/axon_core/src/engine/: crawler.rs  loader.rs
crates/axon_core/src/features/: prompt.rs
crates/axon_core/src/graph/: builder.rs  test_utils.rs
crates/axon_core/src/parser/: javascript.rs
crates/axon_core/src/parser/javascript/: visitor.rs
crates/axon_core/src/tree/: node.rs  options.rs  resolver.rs  source.rs  state.rs
crates/axon_core/src/tree/node/: directory.rs  file.rs
crates/axon_core/src/tree/node/file/: state.rs  symbol.rs
crates/axon_core/src/tree/node/file/state/: found.rs  outlined.rs  read.rs
crates/axon_core/src/tree/state/: analyzed.rs  empty.rs  loaded.rs  scanned.rs
infra/: Caddyfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
infra/dev/: docker-compose.yaml
infra/dev/keycloak/: realm-dev.json
infra/dev/services/: keycloak.yml  postgres.yml
infra/prod/: Caddyfile  docker-compose.yaml
infra/prod/keycloak/: realm-prod.json
infra/prod/scripts/: init-db.sh
infra/prod/services/: axon-server.yml  caddy.yml  client-axon.yml  keycloak.yml  monitoring.yml  postgres.yml  visibility.yml
infra/scripts/: init-db.sh
infra/tauri/: .env.tauri
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
(+294 files in other folders)
