[workspace]
resolver = "2"
members = [
    "crates/axon_core",
    "apps/axon-server",
    "apps/client-axon/src-tauri",
]

[workspace.package]
version = "0.1.0"
authors = ["Thomas Britton"] 
edition = "2021"
repository = "https://github.com/Grilo16/axon"
license = "MIT" 

[workspace.dependencies]
# Core Workspace Dependencies
axon_core = { path = "crates/axon_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
ts-rs = { version = "10.1", features = ["serde-compat"] }
axum = "0.7"
chrono = "0.4"
uuid = "1.21.0"
moka = { version = "0.12.11", features = ["future", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.10"
fuzzy-matcher = "0.3.7"

# Third Party
thiserror = "1.0"
log = "0.4"
ignore = "0.4"
async-trait = "0.1"
futures = "0.3"

# OXC Toolchain (Standardizing versions)
oxc_allocator = "0.13"
oxc_parser = "0.13"
oxc_syntax = "0.13"
oxc_ast = "0.13"
oxc_span = "0.13"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "sqlite"] }
