[package]
name = "axon_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"


[dependencies]
# Inherited from Workspace
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
thiserror.workspace = true
ignore.workspace = true
async-trait.workspace = true
futures.workspace = true
sqlx.workspace = true
tracing.workspace = true

# Parser Stack
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_syntax.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true

rkyv.workspace = true
compact_str.workspace = true
redb.workspace = true
rayon.workspace = true
moka.workspace = true