[package]
name = "axon-desktop"
description = "Desktop distribution for the Axon static analysis platform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.77.2"

[lib]
name = "axon_desktop_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Internal
axon_core = { workspace = true }

# Workspace standard
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
sqlx.workspace = true
async-trait.workspace = true
chrono.workspace = true
moka.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tempfile.workspace = true


# Tauri Specific
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-sql = {version = "2.0.0", features = ["sqlite"] }
tauri-plugin-fs = "2.4.5"
